--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,9 @@
+/*  co mmon section start  */
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl{
+    padding-right: 0;
+    padding-left: 0;
+}
+/*  co mmon section end  */
 .top-banner{
     background-image: url('../image/banner.jpg');
     background-repeat: no-repeat;
@@ -5,4 +11,21 @@
     background-position: center;
     min-height: 550px;
     position: relative;
+    z-index: 1;
+}
+.top-banner::before{
+    padding: 0;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: -1;
+}
+.top-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 1;
 }
