--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,31 +1,54 @@
 /*  co mmon section start  */
-.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl{
-    padding-right: 0;
-    padding-left: 0;
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  padding-right: 0;
+  padding-left: 0;
+}
+:root {
+  --montserrat: "Montserrat", sans-serif;
+  --subrayada: "Montserrat Subrayada", sans-serif;
+  --raleway: "Raleway", sans-serif;
 }
 /*  co mmon section end  */
-.top-banner{
-    background-image: url('../image/banner.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    min-height: 550px;
-    position: relative;
-    z-index: 1;
+.top-banner {
+  background-image: url("../image/banner.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 550px;
+  position: relative;
+  z-index: 1;
 }
-.top-banner::before{
-    padding: 0;
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: -1;
+.top-banner::before {
+  padding: 0;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -1;
 }
-.top-content{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    z-index: 1;
+.top-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+.top-Title{
+    font-family: var(--montserrat);
+    font-size: 48px;
+    font-weight: 700;
+    color: #fff;
+}
+.top-sub-Title{
+    font-family: var(--raleway);
+    font-size: 22px;
+    font-weight: 600;
+    color: #fff;
 }
