--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -58,3 +58,26 @@
   width:80px;
   height:80px;
 }
+.Service-card{
+  margin: 5px;
+  padding: 60px 30px;
+  box-shadow:0 0 8px 0 rgba(4, 55, 105, 0.2);
+  transition: all linear 0.4s;
+}
+.Service-card:hover{
+  box-shadow:0 0 16px 0 rgba(4, 55, 105, 0.2);
+}
+.Service-name{
+  font-family: var(--raleway);
+  font-size: 24px;
+  font-weight: 700;
+  color: #051b35;
+  margin-top: 1rem;
+}
+.service-desc{
+  font-family: var(--raleway);
+  font-size: 15px;
+  font-weight: 400;
+  color: #505050;
+  margin-top: 1rem;
+}
