--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -81,3 +81,17 @@
   color: #505050;
   margin-top: 1rem;
 }
+.service_title{
+  font-family: var(--montserrat);
+  font-size: 28px;
+  font-weight: 700;
+  color: #051b35;
+  padding: 5rem 0;
+}
+.bottom{
+  background: #051b35;
+  height: 3px;
+  width: 100px;
+  margin: -4.9rem auto 0;
+  margin-bottom: 3rem;
+}
