--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -125,3 +125,21 @@
   color: #000 !important;
   transition: all linear 0.4s;
 }
+.summary {
+  background-image: url("../image/summary.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 550px;
+  position: relative;
+  z-index: 1;
+}
+.summary::before {
+  padding: 0;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 6, 41, 0.7);
+  z-index: -1;
+}
