--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -205,7 +205,13 @@ img{
   font-size: 15px;
   text-decoration: none;
 }
-
+.videoCard{
+  box-shadow: 0 13px 10px -5px;
+  padding: 8rem 3rem 8rem 3rem;
+  background-color: #051b35;
+  margin: 20px auto;
+  border-radius: 5px;
+}
 @media (max-width: 576px) { 
   .Recent_projects{
     padding-top: 200px;
