--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -76,7 +76,6 @@ img{
   font-weight: 400;
   color: #505050;
   margin-top: 1rem;
-  text-align: justify;
 }
 .service_title{
   font-family: var(--montserrat);
@@ -137,7 +136,7 @@ img{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 550px;
+  height: 400px;
   position: relative;
   z-index: 1;
 }
@@ -205,12 +204,65 @@ img{
   font-size: 15px;
   text-decoration: none;
 }
+.video-desc{
+  font-family: var(--raleway);
+  font-size: 15px;
+  font-weight: 400;
+  color: #505050;
+  margin-top: 1rem;
+  text-align: justify;
+}
 .videoCard{
   box-shadow: 0 13px 10px -5px;
   padding: 8rem 3rem 8rem 3rem;
   background-color: #051b35;
   margin: 20px auto;
   border-radius: 5px;
+}
+.review_title{
+  font-family: var(--montserrat);
+  font-size: 28px;
+  font-weight: 700;
+  color: #fff;
+  padding: 5rem 0;
+  text-transform: uppercase;
+}
+.review{
+  background-color: #051b35;
+  height: 460px;
+  margin: 60px 0;
+}
+.review_bottom{
+  background: #fff;
+  height: 3px;
+  width: 100px;
+  margin: -4.9rem auto 0;
+  margin-bottom: 3rem;
+}
+.client_profile{
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  margin:0 auto;
+  display: block;
+  background-color: #fff;
+  border: 1px solid #fff;
+}
+.review-desc{
+  font-family: var(--raleway);
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  margin-top: 1rem;
+  text-align: justify;
+}
+.client_name{
+  font-family: var(--raleway);
+  font-size: 24px;
+  font-weight: 700;
+  color: #fff;
+  margin-top: 1rem;
+  text-align: center;
 }
 @media (max-width: 576px) { 
   .Recent_projects{
