Review Section Part-03

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -267,6 +267,9 @@ img{
 .slick-next{
   right: 0px !important;
 }
+.slick-prev{
+  left: 0px !important;
+}
 @media (max-width: 576px) { 
   .Recent_projects{
     padding-top: 200px;
