About Me section Part-01

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -270,6 +270,18 @@ img{
 .slick-prev{
   left: 0px !important;
 }
+.about_img{
+  background-color: #051b35;
+  width: 550px;
+  height: 550px;
+  border-radius: 50%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.face{
+  width:85%;
+}
 @media (max-width: 576px) { 
   .Recent_projects{
     padding-top: 200px;
