--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -275,15 +275,15 @@ body{
 }
 .about_img{
   background-color: #051b35;
-  width: 550px;
-  height: 550px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   display: flex;
   align-items: flex-end;
   justify-content: center;
 }
 .face{
-  width:85%;
+  width:100%;
 }
 .about_content{
   width: 100%;
@@ -293,20 +293,33 @@ body{
   justify-content: center;
   text-align: center;
 }
-.about_details{
+.about_para,.about_details{
   color: #051b35;
-  font-weight: 700;
-  font-size: 40px;
+  font-weight: 400;
+  font-size: 28px;
   font-family: var(--montserrat);
 }
 .about_title{
   color: #051b35;
   font-weight: 600;
-  font-size: 28px;
+  font-size: 40px;
   font-family: var(--raleway);
 }
-@media (max-width: 576px) { 
+@media (max-width: 767.98px){
+  .about_content{
+    margin: 30px 0;
+  }
+}
+@media (max-width: 575.98px) { 
   .Recent_projects{
-    padding-top: 200px;
+    padding-top: 160px;
+  }
+  .summary{
+    height: 100vh;
   }
  }
+ @media (max-width: 991.98px) and (min-width: 576px){ 
+  .Recent_projects{
+    padding-top: 100px;
+  }
+} 
