--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -305,6 +305,19 @@ body{
   font-size: 40px;
   font-family: var(--raleway);
 }
+.footer_section{
+  background-color: #051b35;
+  margin-top: 5rem;
+  box-shadow: 0 0 8px 0;
+}
+.footer_Name{
+  color: #fff;
+  font-family: var(--raleway);
+  margin-top: 1rem;
+  font-size: 22px;
+  font-weight: 600;
+  text-align: center;
+}
 @media (max-width: 767.98px){
   .about_content{
     margin: 30px 0;
