--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -318,6 +318,29 @@ body{
   font-weight: 600;
   text-align: center;
 }
+i.social{
+  font-size: 32px;
+  color: #fff;
+  padding: 16px 32px;
+  transition: all linear 0.4s;
+}
+i.social:hover{
+  transform: translateY(-2px);
+}
+.Social_Icon{
+  padding-top: 30px;
+}
+p.Footer_description{
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  font-family: var(--raleway);
+  font-size: 15px;
+  font-weight: 400;
+}
+.footer_content{
+  padding-top: 16px;
+}
 @media (max-width: 767.98px){
   .about_content{
     margin: 30px 0;
