--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -318,7 +318,6 @@ body{
   margin-top: 1rem;
   font-size: 22px;
   font-weight: 600;
-  text-align: center;
 }
 i.social{
   font-size: 32px;
@@ -365,6 +364,38 @@ p.Footer_description{
   margin-bottom: 0;
   margin-top: 0;
 }
+.top_part {
+  background-image: url("../image/summary.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 250px;
+  position: relative;
+  z-index: 1;
+}
+.top_part::before {
+  padding: 0;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 16, 104, 0.7);
+  z-index: -1;
+}
+.top-part-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+.top-part-sub-Title{
+    font-family: var(--raleway);
+    font-size:40px;
+    font-weight: 600;
+    color: #ffd900;
+    padding-top: 40px;
+}
 @media (max-width: 767.98px){
   .about_content{
     margin: 30px 0;
@@ -372,10 +403,10 @@ p.Footer_description{
 }
 @media (max-width: 575.98px) { 
   .Recent_projects{
-    padding-top: 160px;
+    padding-top: 220px;
   }
   .summary{
-    height: 100vh;
+    height: 520px;
   }
  }
  @media (max-width: 991.98px) and (min-width: 576px){ 
