--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -402,6 +402,36 @@ p.Footer_description{
 .navItem_scroll {
   text-decoration: none;
 }
+.about-thumb-wrap.after-shape{
+  margin-right: 30px;
+  position: relative;
+}
+.about-thumb-wrap.after-shape::after{
+  content: '';
+  position: absolute; 
+  right: -30px;
+  width: 154px;
+  height: 80%;
+  top:50%;
+  border-radius: 10px;
+  background-color: #ffd900;
+  z-index: -1;
+  transform: translateY(-50%);
+}
+.p-details-title{
+  font-family: var(--montserrat);
+  font-size: 40px;
+  color: #051b35;
+  font-weight: 700;
+  padding: 32px 0 0 0;
+}
+.p-details-para{
+  font-family: var(--montserrat);
+  font-size: 15px;
+  color: #051b35;
+  font-weight: 400;
+  padding: 8px 0 0 0;
+}
 @media (max-width: 767.98px){
   .about_content{
     margin: 30px 0;
