Courses Details Part-02

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -119,6 +119,7 @@ body{
 .background_scroll{
   background-color: #fff !important;
   transition: all linear 0.4s;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.7);
 }
 .navItem{
   font-family: var(--montserrat);
@@ -431,6 +432,48 @@ p.Footer_description{
   color: #051b35;
   font-weight: 400;
   padding: 8px 0 0 0;
+}
+.widget_feature {
+  border: 1px solid #CBD6E2;
+}
+.widget_feature .widget-title {
+  padding: 18px 25px;
+  border-bottom: 1px solid #F0F4F9;
+  margin-bottom: 18px !important;
+  font-weight: 700;
+  font-family: var(--montserrat);
+}
+.widget_feature ul {
+  padding: 0 25px 20px;
+}
+.widget_feature ul li {
+  color: #051b35;
+  font-size: 16px;
+  margin-bottom: 9px;
+  list-style: none;
+}
+.widget_feature ul li i {
+  margin-right: 8px;
+}
+.widget_feature ul li span {
+  font-weight: 500;
+  margin-right: 5px;
+}
+.widget_feature .price-wrap {
+  background-color: #F0F4F9;
+  padding: 34px 23px 40px;
+}
+.widget_feature .price-wrap h5 {
+  font-size: 22px;
+  margin-bottom: 28px;
+}
+.widget_feature .price-wrap h5 span {
+  font-weight: 400;
+  margin-left: 5px;
+}
+.widget_feature .price-wrap h5 span {
+  font-weight: 400;
+  margin-left: 5px;
 }
 @media (max-width: 767.98px){
   .about_content{
