Contact section dynamic part-01

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -79,6 +79,7 @@ body{
   font-weight: 400;
   color: #505050;
   margin-top: 1rem;
+  text-align: justify;
 }
 .service_title{
   font-family: var(--montserrat);
