--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -476,6 +476,11 @@ p.Footer_description{
   font-weight: 400;
   margin-left: 5px;
 }
+.loadIcon{
+  width: 140px;
+  height: 140px;
+  margin-top: 200px
+}
 @media (max-width: 767.98px){
   .about_content{
     margin: 30px 0;
